--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -56,8 +56,8 @@
             <li class="layui-nav-item" lay-unselect="">
                 <a href="javascript:;">我的</a>
                 <dl class="layui-nav-child">
-                    <dd><a href="#" th:href="@{/user/myInfo}">修改信息</a></dd>
-                    <dd><a href="javascript:;" th:href="@{/user/myTrade}">交易管理</a></dd>
+                    <dd><a href="#" th:href="@{/user/myInfo}">个人信息</a></dd>
+                    <dd><a href="javascript:;" th:href="@{/user/myTrade}" target="_blank">交易管理</a></dd>
                     <dd><a th:href="@{/user/loginout1}">退出</a></dd>
                 </dl>
             </li>
