--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -65,7 +65,7 @@
                         <dd><a th:href="@{/trade/list}" href="project/trade.html" class="layui-col-md-offset2" target="target">交易信息管理</a></dd>
                     </dl>
                     <dl class="layui-nav-child">
-                        <dd><a th:href="@{/trade/list}" href="project/trade.html" class="layui-col-md-offset2" target="target">交易统计分析</a></dd>
+                        <dd><a th:href="@{/trade/analyze}" href="project/trade.html" class="layui-col-md-offset2" target="target">交易统计分析</a></dd>
                     </dl>
                 </li>
                 <li class="layui-nav-item">
@@ -76,9 +76,9 @@
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/notice/list}" href="test/notice/list.html" class="layui-col-md-offset2" target="target"> 公告信息管理</a></dd>
                     </dl>
-                    <dl class="layui-nav-child">
+                    <!--<dl class="layui-nav-child">
                         <dd><a th:href="@{/index/testEchart}" href="test/echartsDemo/demo-3.html" class="layui-col-md-offset2" target="target"> 测试Echart</a></dd>
-                    </dl>
+                    </dl>-->
                     <dl class="layui-nav-child">
                         <dd><a th:href="@{/risk/show1}"  href="../risk/show.html" class="layui-col-md-offset2" target="target">风险评估参数管理</a></dd>
                     </dl>
