--- a/src/main/resources/templates/user/myTrade.html
+++ b/src/main/resources/templates/user/myTrade.html
@@ -41,7 +41,7 @@
                 {field: 'id', title: 'ID', width:80, sort: true, fixed: 'left'}
                 ,{field: 'product_name', title: '产品名称', width:150}
                 ,{field: 'amount', title: '交易金额', width:140, sort: true}
-                ,{field: 'income', title: '累计收益', width:140}
+                ,{field: 'income', title: '预计收益', width:140}
                 ,{field: 'trade_time', title: '交易时间', width: 140}
                 ,{field: 'start_sale_time', title: '起售时间', width: 140, sort: true}
                 ,{field: 'end_sale_time', title: '停售时间', width: 140, sort: true}
