--- a/src/main/resources/templates/user/register.html
+++ b/src/main/resources/templates/user/register.html
@@ -115,7 +115,7 @@
                             time: 4000 //2秒关闭（如果不配置，默认是3秒）
                         }, function(){
                             //do something
-                            location.href = "../index";
+                            location.href = "../index/home";
                         });
 
                     }
