--- a/src/main/resources/templates/home.html
+++ b/src/main/resources/templates/home.html
@@ -47,7 +47,7 @@
             <li class="layui-nav-item">
                 <a href="#"   id="login">登录</a>
             </li>
-            <li class="layui-nav-item"><a href="http://sso.softseeks.cn/Reg">注册</a></li>
+            <li class="layui-nav-item"><a href="#" th:href="@{/user/register}">注册</a></li>
         </ul>
         <ul class="layui-nav layui-right" th:unless="${session.user == null}">
             <li class="layui-nav-item">
@@ -113,7 +113,7 @@
                             <p class="g-mt20 f1-t1">慧赢成长18149</p>
                             <p class="g-mt14 s-fc-gy">预期年化收益 5.6%</p>
                             <p class="s-fc-gy">三分钟打造自己的小程序</p>
-                            <a href="#" class="border_blue">立即购买</a>
+                            <a href="#" class="border_blue" th:href="@{/product/detail(productCode=20180409174743)}">立即购买</a>
                         </div>
                     </li>
                     <li>
@@ -122,7 +122,7 @@
                             <p class="g-mt20 f1-t1">慧赢成长18149</p>
                             <p class="g-mt14 s-fc-gy">预期年化收益 5.6%</p>
                             <p class="s-fc-gy">三分钟打造自己的小程序</p>
-                            <a href="#" class="border_blue">立即购买</a>
+                            <a href="#" class="border_blue" th:href="@{/product/detail(productCode=20180409174743)}">立即购买</a>
                         </div>
                     </li>
                     <li>
@@ -131,7 +131,7 @@
                             <p class="g-mt20 f1-t1">慧赢成长18149</p>
                             <p class="g-mt14 s-fc-gy">预期年化收益 5.6%</p>
                             <p class="s-fc-gy">三分钟打造自己的小程序</p>
-                            <a href="#" class="border_blue">立即购买</a>
+                            <a href="#" class="border_blue" th:href="@{/product/detail(productCode=20180409174743)}">立即购买</a>
                         </div>
                     </li>
                     <li>
@@ -140,7 +140,7 @@
                             <p class="g-mt20 f1-t1">慧赢成长18149</p>
                             <p class="g-mt14 s-fc-gy">预期年化收益 5.6%</p>
                             <p class="s-fc-gy">三分钟打造自己的小程序</p>
-                            <a href="#" class="border_blue">立即购买</a>
+                            <a href="#" class="border_blue" th:href="@{/product/detail(productCode=20180409174743)}">立即购买</a>
                         </div>
                     </li>
 
@@ -158,7 +158,7 @@
                     <li>
                         <a href="#" target="_blank" class="t-con-new-item bg-7">
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon07"></i></div>
-                            <h3>新零售</h3>
+                            <h3>保本稳利364天BBWL364</h3>
                             <p>
                                 商城、营销、会员<br/>
                                 门店全方位管理<br/>
@@ -170,7 +170,7 @@
                     <li>
                         <a href="#" target="_blank" class="t-con-new-item bg-8">
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon08"></i></div>
-                            <h3>新餐饮</h3>
+                            <h3>财富稳利999天CFWL10</h3>
                             <p>
                                 订座 堂吃点餐 外卖<br/>
                                 餐饮行业前厅后厨外卖<br/>
@@ -182,7 +182,7 @@
                     <li>
                         <a href="#" target="_blank" class="t-con-new-item bg-9">
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon09"></i></div>
-                            <h3>新零售</h3>
+                            <h3>财鑫通</h3>
                             <p>
                                 商城、营销、会员<br/>
                                 门店全方位管理<br/>
@@ -194,7 +194,7 @@
                     <li>
                         <a href="#" target="_blank" class="t-con-new-item bg-10">
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon10"></i></div>
-                            <h3>新零售</h3>
+                            <h3>个人高净值</h3>
                             <p>
                                 商城、营销、会员<br/>
                                 门店全方位管理<br/>
@@ -206,7 +206,8 @@
                     <li>
                         <a href="#" target="_blank" class="t-con-new-item bg-11">
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon11"></i></div>
-                            <h3>新零售</h3>
+                            <h3>
+                                PBZO1300现金管理T+0</h3>
                             <p>
                                 商城、营销、会员<br/>
                                 门店全方位管理<br/>
@@ -218,7 +219,7 @@
                     <li>
                         <a href="#" target="_blank" class="t-con-new-item bg-12">
                             <div class="t-con-new-item-bg"><i class="t-con-new-item-icon12"></i></div>
-                            <h3>新零售</h3>
+                            <h3>PBZO1600工银私银</h3>
                             <p>
                                 商城、营销、会员<br/>
                                 门店全方位管理<br/>
