--- a/src/main/resources/templates/notice/show.html
+++ b/src/main/resources/templates/notice/show.html
@@ -18,7 +18,7 @@
     <div class="layui-header">
         <ul class="layui-nav layui-layout-left">
             <li class="layui-nav-item"><a href="#">银行理财平台</a></li>
-            <li class="layui-nav-item" id="Index"><a href="#">首页</a></li>
+            <li class="layui-nav-item" id="Index"><a href="#" th:href="@{/index/home}">首页</a></li>
 
             <li class="layui-nav-item" id="Agents"><a href="#" th:href="@{/product/show}">理财产品</a></li>
             <li class="layui-nav-item layui-this" id="News"><a href="#" th:href="@{/notice/show}">理财资讯</a></li>
